# Ceres-Windows

./: README.md
ceres/CMake/: CeresConfig.cmake  CeresConfigVersion.cmake  CeresTargets-debug.cmake  CeresTargets-release.cmake  CeresTargets.cmake
ceres/include/ceres/internal/: config.h
ceres/lib/: ceres-debug.lib  ceres.lib
ceres_demo/: CMakeLists.txt  main.cpp
gflags/lib/: gflags.lib  gflags_debug.lib  gflags_nothreads.lib  gflags_nothreads_debug.lib
gflags/lib/cmake/gflags/: gflags-nonamespace-targets-debug.cmake  gflags-nonamespace-targets-release.cmake  gflags-nonamespace-targets.cmake  gflags-targets-debug.cmake  gflags-targets-release.cmake  gflags-targets.cmake
glog/include/glog/: logging.h  raw_logging.h  vlog_is_on.h
glog/lib/: glog.lib  glogd.lib
glog/lib/cmake/glog/: glog-targets.cmake
glog/lib/pkgconfig/: libglog.pc
